--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ replay_pid*
 
 # Kotlin Gradle plugin data, see https://kotlinlang.org/docs/whatsnew20.html#new-directory-for-kotlin-data-in-gradle-projects
 .kotlin/
+
+# Firebase Google Services JSON file
+google-services.json
